--- a/src/templates/fields/settings.twig
+++ b/src/templates/fields/settings.twig
@@ -8,7 +8,7 @@
     name: 'configFile',
     value: field.configFile ?? null,
     required: true,
-    placeholder: "_site/json/layout.json",
+    placeholder: "_selectplus/config/simple.json",
     suggestions: [
         { data: options },
     ],
@@ -23,13 +23,13 @@
 <p>Try one of these file paths as the <strong>JSON Config</strong> to test out how the field works:</p>
 
 <ul>
-    <li><code>_selectplus/config/basic.json</code></li>
+    <li><code>_selectplus/config/simple.json</code></li>
     <li><code>_selectplus/config/all-inputs.json</code></li>
     <li><code>_selectplus/config/button-only.json</code></li>
 </ul>
 
 <p>
-    Additional <a href="https://github.com/simplicateca/craft-selectplus-field/blob/main/src/templates/samples/config/" target="_blank">configuration
+    Additional <a href="https://github.com/simplicateca/craft-selectplus-field/tree/main/src/templates/samples/config" target="_blank">configuration
     examples</a> and <a href="https://github.com/simplicateca/craft-selectplus-field/tree/main" target="_blank">documentation
     available on Github</a>.
 </p>
