--- a/src/templates/selectplus.twig
+++ b/src/templates/selectplus.twig
@@ -34,13 +34,13 @@
 {-------------------------------------------------------------------------------------##}
 {% macro helpmodals( field, options ) %}
     {% for opt in options %}
-        {% if opt.tooltips.template ?? null %}
+        {% if opt.tooltips.helptwig ?? null %}
             <template
                 data-title="{{ opt.tooltips.help ?? "Help"|t }}"
-                data-moreurl="{{ opt.tooltips.moreurl ?? null }}"
+                data-helpurl="{{ opt.tooltips.helpurl ?? null }}"
                 data-name='{{ "#{field.handle}__#{opt.value}__help" | snake | lower }}'
                 data-virtuals="{{ opt.virtuals ?? null ? 'true' : 'false' }}"
-            >{{ include( opt.tooltips.template ) }}</template>
+            >{{ include( opt.tooltips.helptwig ) }}</template>
         {% endif %}
     {% endfor %}
 {% endmacro %}
@@ -50,20 +50,25 @@
 {## Virtual Field Modal Templates
 {-------------------------------------------------------------------------------------##}
 {% macro virtualmodals( field, options, json ) %}
+
+    {## decode JSON string if necessary ##}
+    {% set json = ( json is string ) ? json | json_decode : json %}
+
     {% import "_includes/forms" as forms %}
     {% for opt in options %}
         {% if opt.virtuals ?? null %}
             <template
                 data-name='{{ "#{field.handle}__#{opt.value}__virtuals" | snake | lower }}'
-                data-title="{{ opt.tooltips.virtuals ?? "Settings"|t }}"
-                data-help="{{ opt.tooltips.template ?? null ? 'true' : 'false' }}"
+                data-title="{{ opt.tooltips.input ?? "Settings"|t }}"
+                data-help="{{ opt.tooltips.helptwig ?? null ? 'true' : 'false' }}"
             >
-                {% if opt.tooltips.aboveform ?? null %}<p class='intro'>{{ opt.tooltips.aboveform | markdown | retconChange( 'p', false ) }}</p>{% endif %}
+                {% if opt.tooltips.inputabove ?? null %}<p class='intro'>{{ opt.tooltips.inputabove | markdown | retconChange( 'p', false ) }}</p>{% endif %}
                 {% for virt in opt.virtuals %}
                     {% set currval = ( virt.name ?? null and json[virt.name] ?? null ) ? json[virt.name] : null %}
                     {% set virt = loop.first and loop.last ? virt | merge({ _only: true }) : virt %}
                     {{ _self.input( virt.type, virt, currval ) }}
                 {% endfor %}
+                {% if opt.tooltips.inputbelow ?? null %}<p class='outro'>{{ opt.tooltips.inputbelow | markdown | retconChange( 'p', false ) }}</p>{% endif %}
             </template>
         {% endif %}
     {% endfor %}
@@ -221,6 +226,9 @@
                 value       : field.value,
                 fieldClass  : field.fieldClass,
                 instructions: field.instructions,
+                data : {
+                    name: field.name,
+                }
             }) }}
         {% case "color" %}
             {% include "selectplus/fields/virtual.color" with {
