--- a/src/templates/samples/help/sample.twig
+++ b/src/templates/samples/help/sample.twig
@@ -59,18 +59,16 @@
     ]
 {-------------------------------------------------------------------------------------##}
 
-<h1>Help Documentation for {{ opt.label }}.</h1>
+<h1>Help for {{ field.name }} - {{ opt.label }}.</h1>
 
-{% if opt.tooltips.inline ??? null %}
+{% if opt.tooltips.inline ?? null %}
     <p class="intro">{{ opt.tooltips.inline | markdown | retconChange( 'p', false ) }}</p>
 {% endif %}
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ex ea difficultate illae fallaciloquae, ut ait Accius.</p>
+<p><strong>ACTUAL TIP</strong> - Add your own "non-standard" keys to the `tooltips` config and use them as populate the `helptwig` template file.</p>
 
-{% if opt.virtuals ??? null %}
-
-    <h2>Available Configuration Fields</h2>
-
+{% if opt.virtuals ?? null %}
+    <h2>Configurable Field Settings</h2>
     <ul>
         {% for virt in opt.virtuals %}
             <li><Strong>{{ virt.label }}</strong><br>{{ virt.instructions }}</li>
@@ -78,10 +76,16 @@
     </ul>
 {% endif %}
 
+{% if opt.settings ?? null %}
+    <h2>Hard Settings</h2>
+    {{ dump( opt.settings )}}
+{% endif %}
+
+<h2>A Helpful Video!</h2>
 <div class="video">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/x5bVKZxFdPo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="mx-auto"></iframe>
 </div>
 
-<p><b>An haec ab eo non dicuntur?</b> Duo Reges: constructio interrete. Nam Metrodorum non puto ipsum professum, sed, cum appellaretur ab Epicuro, repudiare tantum beneficium noluisse.</p>
+<p><b>Bork!</b> An haec ab eo non dicuntur? Duo Reges: constructio interrete. Nam Metrodorum non puto ipsum professum, sed, cum appellaretur ab Epicuro, repudiare tantum beneficium noluisse.</p>
 
-<p><a href="https://www.example.com" target="_blank">Bork Qui est ➔</a></p>
+<p><a href="https://www.example.com" target="_blank">An inline link ➔</a></p>
